--- a/mywatchface/build.gradle
+++ b/mywatchface/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "24.0.3"
 
     defaultConfig {
-        applicationId "com.example.sunshinewatchface"
+        applicationId "com.example.myapplication"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
@@ -23,6 +23,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:2.0.0-alpha3'
-    compile 'com.google.android.gms:play-services-wearable:9.6.1'
-    compile 'com.android.support:palette-v7:24.2.1'
+    compile 'com.google.android.gms:play-services-wearable:10.0.0'
+    provided 'com.google.android.wearable:wearable:2.0.0-alpha3'
 }
