--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -183,6 +183,15 @@
         <service
             android:name=".gcm.RegistrationIntentService"
             android:exported="false" />
+
+        <service android:name=".SendMessaageService"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="com.example.android.sunshine.app.SEND_TO_WEARABLE"/>
+            </intent-filter>
+
+        </service>
     </application>
 
 </manifest>
